Add alt text to images and rename CSS class

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -48,7 +48,7 @@ main {
   width: 80%;
 }
 
-.sidebar-header-userImage {
+.sidebar-image {
   border-radius: 50%;
   border-color: black;
   border-style: solid;
