Reduce CSS class redundancy in activity/sleep/hydration cards

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -54,11 +54,6 @@ main {
   justify-content: center;
 }
 
-.friend-data-container {
-  display: flex;
-  flex-direction: column;
-}
-
 .body-main-infoContainter {
   width: 100%;
   border: 1px solid black;
@@ -68,22 +63,9 @@ main {
   overflow: scroll;
 }
 
-.main-column-hydration {
+.column {
   display: flex;
   flex-direction: row;
-  height: 25%
-}
-
-.main-column-activity {
-  display: flex;
-  flex-direction: row;
-  height: 50%
-}
-
-.main-column-sleep {
-  display: flex;
-  flex-direction: row;
-  height: 35%
 }
 
 .info-card-container {
@@ -113,74 +95,29 @@ main {
   overflow: scroll;
 }
 
-.card-today-hydration {
-  text-align: center;
-  background-color: #5BC8AC;
+.card {
   height: auto;
-  font-size: 1.5em;
+  font-size: 1.25em;
   margin: .5em;
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 80%;
-}
-
-.card-today-sleep {
   text-align: center;
-  background-color: #EC96A4;
-  height: auto;
-  font-size: 1.5em;
-  margin: .5em;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 80%;
-}
-
-.card-today-activity {
-  text-align: center;
-  background-color: #DFE166;
-  height: auto;
-  font-size: 1.5em;
-  margin: .3em;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 40%;
-}
-
-.card-history-hydration {
-  text-align: center;
-  background-color: #5BC8AC;
-  font-size: 1em;
-  margin: .5em;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  padding: 2%;
   width: 50%;
 }
 
-.card-history {
-  margin: .5em;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  width: 50%;
+.hydration-card {
+  background-color: #5BC8AC;
 }
 
-.sleep-history {
+.sleep-card {
   background-color: #EC96A4;
 }
 
-.activity-history {
+.activity-card {
   background-color: #DFE166;
-  height: 93%;
-  overflow: scroll;
 }
 
 .number {
