--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -54,13 +54,12 @@ main {
   justify-content: center;
 }
 
-.body-main-infoContainter {
+.info-container {
   width: 100%;
-  border: 1px solid black;
-  margin: 0 0 1em;
+  min-width: 800px;
+  margin: 1%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
 }
 
 .column {
