--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,11 +1,13 @@
 * {
   margin: 0;
 }
+
 body {
   font-family: 'Open Sans';
   background-color: #4d4e4f;
   height: auto;
 }
+
 h1 {
   text-align: center;
   color: #ffffff;
@@ -54,7 +56,7 @@ main {
 
 .info-container {
   width: 100%;
-  min-width: 800px;
+  // min-width: 800px;
   margin: 1%;
   display: flex;
   flex-direction: column;
@@ -84,6 +86,7 @@ main {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
 .card {
   height: auto;
   font-size: 1.25em;
@@ -99,6 +102,7 @@ main {
 .hydration-card {
   background-color: #5BC8AC;
 }
+
 .sleep-card {
   background-color: #EC96A4;
 }
@@ -106,6 +110,7 @@ main {
 .activity-card {
   background-color: #DFE166;
 }
+
 .number {
   font-size: 2em;
   font-weight: bolder;
@@ -122,3 +127,13 @@ main {
   font-size: 1em;
 }
 
+@media only screen and (max-width: 1330px) {
+  main {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 90%;
+  }
+}
