--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -36,7 +36,7 @@ main {
   width: 25%;
 }
 
-.sidebar h2, .sidebar p {
+.sidebar h2, .sidebar h3 {
   border-bottom: 3px solid black;
   margin: 0.5em;
   padding: 0.5em;
