--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -24,8 +24,7 @@ h3 {
 }
 
 main {
-  display: flex;
-  flex-direction: row;
+  @include flexed-element(row);
   height: 100%;
 }
 
@@ -33,8 +32,7 @@ main {
   align-items: center;
   background-color: $sidebar-background;
   border: $border;
-  display: flex;
-  flex-direction: column;
+  @include flexed-element(column);
   font-family: sans-serif;
   font-size: 1.2em;
   font-weight: bold;
@@ -65,31 +63,28 @@ main {
 .info-container {
   width: 100%;
   margin: 1%;
-  display: flex;
-  flex-direction: column;
+  @include flexed-element(column);
 }
 
 .column {
-  display: flex;
-  flex-direction: row;
+  @include flexed-element(row);
 }
 
 .info-card-container {
   width: 100%;
   background-color: $card-background;
   border: $border;
-  display: flex;
   margin: 1%;
 }
 
 .horizontal-card {
-  flex-direction: column;
+  @include flexed-element(column);
   align-items: center;
   justify-content: space-evenly;
 }
 
 .vertical-card {
-  flex-direction: row;
+  @include flexed-element(row);
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
@@ -99,8 +94,7 @@ main {
   font-size: 1.25em;
   margin: .5em;
   font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
+  @include flexed-element(column);
   text-align: center;
   padding: 2%;
   width: 80%;
@@ -137,7 +131,7 @@ main {
 @media only screen and (max-width: 1330px) {
   main {
     align-items: center;
-    flex-direction: column;
+    @include flexed-element(column);
   }
 
   .sidebar {
@@ -147,6 +141,6 @@ main {
 
 @media only screen and (max-width: 770px) {
   .column {
-    flex-direction: column;
+    @include flexed-element(column);
   }
 }
