Add font variables to SCSS

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,6 +6,8 @@ $hydration-card: #5BC8AC;
 $activity-card: #DFE166;
 $sleep-card: #EC96A4;
 $border: 1px solid #000000;
+$primary-font: 'Open Sans', sans-serif;
+$secondary-font: sans-serif;
 
 @mixin flexed-element($direction) {
   display: flex;
