--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -40,9 +40,7 @@ main {
   padding: 1%;
   text-align: center;
   width: 25%;
-}
 
-.sidebar {
   h2, h3 {
     border-bottom: $border;
     margin: 0.5em;
@@ -97,10 +95,13 @@ main {
   text-align: center;
   padding: 2%;
   width: 80%;
+  transform: all 0.5s ease-in-out;
+  transition: 0.5s;
 
   &:hover {
     transform: scale(1.05);
     transition-duration: 0.5s;
+    box-shadow: 5px 5px 0px 0px #0000003d;
   }
 }
 
