Add border styling as SASS var

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -7,6 +7,7 @@ $activity-card: #DFE166;
 $sleep-card: #EC96A4;
 
 $border: 1px solid #000000;
+$border-yellow: 1px solid #FBD000;
 
 $primary-font: 'Open Sans', sans-serif;
 $secondary-font: sans-serif;
